--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "arosteguimaranto <arosteguimaranto@outlook.com>",
   "license": "MIT",
   "dependencies": {
+    "classnames": "^2.5.1",
     "minireset.css": "^0.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
